# 3d_homework_11

./: .gitignore  homework_11.ipynb  o3d_detection.ipynb  poss_train.ipynb  pyproject.toml  randlanet_explained.ipynb  randlanet_poss.yml
train_log/00001_RandLANet_POSS_torch/: events.out.tfevents.1765102282.daniil-HP.29372.0
train_log/00002_RandLANet_POSS_torch/: events.out.tfevents.1765102447.daniil-HP.29372.1
train_log/00003_RandLANet_POSS_torch/: events.out.tfevents.1765102455.daniil-HP.29372.2
train_log/00004_RandLANet_POSS_torch/: events.out.tfevents.1765102464.daniil-HP.29372.3
train_log/00005_RandLANet_POSS_torch/: events.out.tfevents.1765102488.daniil-HP.29372.4
train_log/00006_RandLANet_POSS_torch/: events.out.tfevents.1765102513.daniil-HP.215920.0
train_log/00007_RandLANet_POSS_torch/: events.out.tfevents.1765102617.daniil-HP.215920.1
train_log/00008_RandLANet_POSS_torch/: events.out.tfevents.1765103169.daniil-HP.215920.2
train_log/00009_RandLANet_POSS_torch/: events.out.tfevents.1765103249.daniil-HP.215920.3
train_log/00010_RandLANet_POSS_torch/: events.out.tfevents.1765104158.daniil-HP.215920.4
train_log/00011_RandLANet_POSS_torch/: events.out.tfevents.1765104206.daniil-HP.238174.0
train_log/00012_RandLANet_POSS_torch/: events.out.tfevents.1765104263.daniil-HP.238174.1
train_log/00013_RandLANet_POSS_torch/: events.out.tfevents.1765104268.daniil-HP.238174.2
train_log/00014_RandLANet_POSS_torch/: events.out.tfevents.1765104337.daniil-HP.238174.3
train_log/00015_RandLANet_POSS_torch/: events.out.tfevents.1765104343.daniil-HP.238174.4
(+14 files in other folders)
