[tool.poetry]
name = "homework-11"
version = "0.1.0"
description = ""
authors = ["DaniilShd <ds_const@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
open3d = ">=0.19.0,<0.20.0"
torch = ">=2.0, <2.3"  # или "2.1.*", если хотите конкретную версию
tensorboard = ">=2.20.0,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
seaborn = ">=0.13.2,<0.14.0"
numpy = ">=1.21, <2"
opencv-python = ">=4.10, <4.12" # или конкретно "4.11.0.86"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"